<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hobot_arm</name>
  <version>2.0.0</version>
  <description>horizonRDK Robotic arm device</description>
  <maintainer email="zixi01.chen@horizon.cc">zixi01.chen</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ai_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>mono2d_trash_detection</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
